--- a/package.json
+++ b/package.json
@@ -1,17 +1,18 @@
 {
-  "name": "vue-vite-typescript-electron",
+  "name": "electron-vue",
   "version": "0.0.0",
   "main": "dist/electron/main.js",
   "scripts": {
-    "dev": "vite",
     "build": "run-p type-check build-only",
-    "preview": "vite preview --port 4173",
-    "test:unit": "vitest --environment jsdom",
-    "test:e2e": "concurrently 'NODE_ENV=test vite --port 4173' 'CYPRESS_BASE_URL=http://127.0.0.1:4173 cypress open --e2e'",
-    "test:e2e:ci": "concurrently 'NODE_ENV=test vite --port 4173' 'CYPRESS_BASE_URL=http://127.0.0.1:4173 cypress run --e2e'",
     "build-only": "vite build && electron-builder",
-    "type-check": "vue-tsc --noEmit -p tsconfig.vitest.json --composite false",
-    "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore"
+    "dev": "vite",
+    "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore",
+    "preview": "vite preview --port 4173",
+    "test:unit": "vitest run --environment jsdom",
+    "test:unit:watch": "vitest --environment jsdom",
+    "test:e2e": "concurrently 'cross-env NODE_ENV=test vite --port 4173' 'CYPRESS_BASE_URL=http://127.0.0.1:4173 cypress open --e2e'",
+    "test:e2e:ci": "concurrently 'cross-env NODE_ENV=test vite --port 4173' 'CYPRESS_BASE_URL=http://127.0.0.1:4173 cypress run --e2e'",
+    "type-check": "vue-tsc --noEmit -p tsconfig.vitest.json --composite false"
   },
   "dependencies": {
     "pinia": "^2.0.14",
@@ -20,6 +21,7 @@
     "vue-router": "^4.0.16"
   },
   "devDependencies": {
+    "@pinia/testing": "^0.0.12",
     "@rushstack/eslint-patch": "^1.1.0",
     "@types/jsdom": "^16.2.14",
     "@types/node": "^18.0.3",
@@ -30,6 +32,7 @@
     "@vue/tsconfig": "^0.1.3",
     "autoprefixer": "^10.4.7",
     "concurrently": "^7.2.2",
+    "cross-env": "^7.0.3",
     "cypress": "^10.1.0",
     "electron": "^19.0.7",
     "electron-builder": "^23.1.0",
